Text align fix

--- a/style.scss
+++ b/style.scss
@@ -68,7 +68,7 @@ sans-serif;
                     padding: .5rem 1rem;
                     resize: none;
                     height: 150px;
-
+                    text-align: center;
                     font-weight: 600;
                     letter-spacing: 1px;
                 }
